WIP - tried postrgres sql connections Todo: will have to resolve the 'relation' issue: https://stackoverflow.com/questions/61379682/postgres-relation-does-not-exist-when-the-table-clearly-exists-when-calling-fro

--- a/Styles/app.css
+++ b/Styles/app.css
@@ -12,7 +12,7 @@
 
 
 body {
-    border: 1px solid green;
+    /*border: 1px solid green;*/
 }
 
 
